# lets-code-math-and-physics

./: README.md  pyproject.toml
chapter01_math/01_simple_plots/: 01_sine_wave.md  sine_wave.ipynb  sine_wave.m  sine_wave.py  some_more_about_simple_plots.py
chapter01_math/02_derivatives_and_velocity/: 02_derivatives_and_velocity.md  decent_derivative_but_with_functions.py  plot_a_decent_derivative.py  plot_an_awful_derivative.ipynb  what_is_a_derivative.py  what_is_a_derivative_condensed.py
chapter01_math/03_analytical_vs_symbolic_vs_numerical_derivatives/: 03_analytical_vs_symbolic_vs_numerical_derivatives.md  analytical_vs_numerical.py
chapter01_math/04_integrals/: 04_integrals.md  integrals.py
